<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:textSize="48dp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"/>
    <TextView
        android:id="@+id/nv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/lesson1"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

    <TextView
        android:id="@+id/nv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson2"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

    <TextView
        android:id="@+id/nv_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson3"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

    <TextView
        android:id="@+id/nv_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson4"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

    <TextView
        android:id="@+id/nv_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson5"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

    <TextView
        android:id="@+id/nv_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson6"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

    <TextView
        android:id="@+id/nv_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson7"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textColor="@color/my_collor"/>

</LinearLayout>