<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ringtone"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_margin="6dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_answers">

        <RadioButton
            android:id="@+id/trek1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone1"
            />

        <RadioButton
            android:id="@+id/trek2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone2"
            />

        <RadioButton
            android:id="@+id/trek3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone3"
            />

        <RadioButton
            android:id="@+id/trek4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone4"
            />
    </RadioGroup>

    <Button
        android:id="@+id/main_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:backgroundTint="@color/red"
        android:text="ok" />

</LinearLayout>