<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/schoo">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_schedule"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/btn_return"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_return"
        android:layout_width="66dp"
        android:layout_height="46dp"
        app:backgroundTint="@color/red"
        app:icon="@drawable/ic_baseline_west_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_monday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/Monday"
        app:cornerRadius="12dp"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_tuesday"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tuesday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cornerRadius="12dp"
        android:text="@string/Tuesday"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_wednesday"
        app:layout_constraintTop_toBottomOf="@+id/btn_monday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_thursday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:cornerRadius="12dp"
        android:text="@string/Thursday"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_friday"
        app:layout_constraintTop_toBottomOf="@+id/btn_wednesday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_wednesday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:cornerRadius="12dp"
        android:text="@string/Wednesday"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_thursday"
        app:layout_constraintTop_toBottomOf="@+id/btn_tuesday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_friday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cornerRadius="12dp"
        android:textColor="@color/black"
        android:text="@string/Friday"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_edit"
        app:layout_constraintTop_toBottomOf="@+id/btn_thursday"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_friday" />

</androidx.constraintlayout.widget.ConstraintLayout>