<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/schoo">

    <DatePicker
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:visibility="invisible"
        android:background="@color/white"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:visibility="invisible"
        android:background="@color/white"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_return"
        android:layout_width="66dp"
        android:layout_height="46dp"
        app:backgroundTint="@color/red"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_west_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_date"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/yellow"
        android:text="@string/Set_the_date"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_date_range_24"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_singl"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_time"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/yellow"
        android:text="@string/Set_the_time"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_access_time_24"
        app:iconTint="@color/black"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_st"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/START"
        android:textColor="@color/black"
        app:backgroundTint="@color/yellow"
        app:icon="@drawable/ic_baseline_access_alarms_24"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        app:backgroundTint="@color/yellow"
        android:text="@string/STOP"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time" />

    <TextView
        android:id="@+id/tv_tex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_st"
        tools:text="Завтра взять форму" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_singl"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:backgroundTint="@color/yellow"
        android:text="@string/singl"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tex" />

</androidx.constraintlayout.widget.ConstraintLayout>