<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/schoo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_return"
            android:layout_width="66dp"
            android:layout_height="46dp"
            app:backgroundTint="@color/red"
            android:layout_margin="8dp"
            app:icon="@drawable/ic_baseline_west_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Creating_a_note"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarmSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/notify"
            app:switchPadding="8dp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/test_shape"
        android:elevation="4dp"
        android:gravity="start|top"
        android:hint="@string/enter_your_note"
        android:maxHeight="100dp"
        android:minHeight="100dp"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <DatePicker
        android:theme="@style/myTheme"
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@+id/timePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNote" />

    <TimePicker
        android:theme="@style/myTheme"
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TextView
        android:id="@+id/confirm"
        style="@style/ButtonTextView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:text="@string/confirm"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>